# hajime

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs  switcher.rs
src/utils/: admin_utils.rs  mod.rs
views/: index.html
