[package]
name = "hajime"
version = "1.0.0"
authors = ["Robin A. P. <me@mempler.de>"]
edition = "2018"

[dependencies]
web-view = { version = "0.5.4", features = ["edge"] }
tokio = { version = "0.2.20", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
webbrowser = "0.5.2"
serde_json = "1.0"
reqwest = "0.10.4"
futures = "0.3.4"
clap = "2.33.0"
libc = "0.2.69"
runas = "0.2.1"


[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"
winrt = { version = "0.6.0", features = ["windows-data", "windows-ui"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
